@@ -12,6 +12,7 @@
 ##
 
 - Fixed maximum password length in modules of hash-modes 600, 7800, 7801 and 9900
+- Fixed non-zero status code when using --stdout
 - Fixed uninitialized value in bitsliced DES kernel (BF mode only) leading to false negatives
 
 ##
